soft fallbacks to hell -> fail LOUD instead

--- a/roles/homeassistant/tasks/seedbox-restore.yml
+++ b/roles/homeassistant/tasks/seedbox-restore.yml
@@ -6,24 +6,20 @@
     src: scripts/find-seedbox.sh
     dest: /tmp/find-seedbox.sh
     mode: '0755'
-  tags: [seedbox_restore]
 
 - name: Discover seedbox on network
   ansible.builtin.shell: bash /tmp/find-seedbox.sh
   register: seedbox_discovery
   failed_when: seedbox_discovery.rc != 0
   changed_when: false
-  tags: [seedbox_restore]
 
 - name: Set seedbox IP from discovery
   ansible.builtin.set_fact:
     seedbox_ip: "{{ seedbox_discovery.stdout_lines | last }}"
-  tags: [seedbox_restore]
 
 - name: Show discovered seedbox
   ansible.builtin.debug:
     msg: "Discovered seedbox at: {{ seedbox_ip }}"
-  tags: [seedbox_restore]
 
 - name: Determine SSH user for seedbox
   ansible.builtin.shell: |
@@ -37,12 +33,10 @@
   register: seedbox_user_check
   failed_when: seedbox_user_check.rc != 0
   changed_when: false
-  tags: [seedbox_restore]
 
 - name: Set seedbox SSH user
   ansible.builtin.set_fact:
     seedbox_user: "{{ seedbox_user_check.stdout }}"
-  tags: [seedbox_restore]
 
 - name: Find .storage path on seedbox
   ansible.builtin.shell: |
@@ -56,15 +50,11 @@
   register: seedbox_storage_path
   failed_when: seedbox_storage_path.rc != 0
   changed_when: false
-  tags: [seedbox_restore]
 
 - name: Stop HA container before .storage sync
   ansible.builtin.shell: |
     sg docker -c 'docker stop {{ ha_container_name }}'
-  register: ha_stop
-  failed_when: false
-  changed_when: ha_stop.rc == 0
-  tags: [seedbox_restore]
+  changed_when: true
 
 - name: Sync .storage from seedbox to target
   ansible.builtin.shell: |
@@ -73,9 +63,7 @@
       -e "ssh -o StrictHostKeyChecking=no" \
       {{ seedbox_user }}@{{ seedbox_ip }}:{{ seedbox_storage_path.stdout }}/ \
       {{ ha_config_dir }}/.storage/
-  register: storage_sync
   changed_when: true
-  tags: [seedbox_restore]
 
 - name: Fix .storage ownership
   ansible.builtin.file:
@@ -84,14 +72,11 @@
     group: "{{ runtime_gid }}"
     recurse: yes
     state: directory
-  tags: [seedbox_restore]
 
 - name: Start HA container after .storage sync
   ansible.builtin.shell: |
     sg docker -c 'docker start {{ ha_container_name }}'
-  register: ha_start
-  changed_when: ha_start.rc == 0
-  tags: [seedbox_restore]
+  changed_when: true
 
 - name: Seedbox restore summary
   ansible.builtin.debug:
@@ -100,4 +85,3 @@
       - "Seedbox: {{ seedbox_user }}@{{ seedbox_ip }}"
       - "Path: {{ seedbox_storage_path.stdout }}"
       - "Target: {{ ha_config_dir }}/.storage/"
-  tags: [seedbox_restore]
