--- a/.github/workflows/deploy-ha.yml
+++ b/.github/workflows/deploy-ha.yml
@@ -163,6 +163,7 @@ jobs:
         env:
           GITHUB_USERNAME: ${{ secrets.GH_USERNAME }}
           GITHUB_PAT: ${{ secrets.GH_PAT }}
+          SSH_PRIV_KEY: ${{ secrets.SSH_PRIV_KEY }}
           CF_TUNNEL_TOKEN: ${{ secrets.CF_TUNNEL_TOKEN }}
           HA_USER_USERNAME: ${{ secrets.HA_USER_USERNAME }}
           HA_USER_PASSWORD: ${{ secrets.HA_USER_PASSWORD }}
