--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,3 +5,7 @@ deprecation_warnings = False
 # Optional: andere handige settings
 host_key_checking = False
 retry_files_enabled = False
+
+[ssh_connection]
+# Enable SSH agent forwarding for seedbox discovery (Linux box scenario)
+ssh_args = -o ForwardAgent=yes -o ControlMaster=auto -o ControlPersist=60s
