--- a/inventories/group_vars/all.yml
+++ b/inventories/group_vars/all.yml
@@ -24,7 +24,7 @@ ha_user_username: "{{ lookup('env', 'HA_USER_USERNAME') }}"
 ha_user_password: "{{ lookup('env', 'HA_USER_PASSWORD') }}"
 ha_bootstrap_enable: true
 ha_container_name: homeassistant_ansible
-seedbox_network: "192.168.3.0/24"
+ha_seedbox_network: "192.168.3.0/24"
 ha_network_mode: bridge
 ha_host_port: 8123
 
