--- a/roles/homeassistant/tasks/env_boot.yml
+++ b/roles/homeassistant/tasks/env_boot.yml
@@ -61,8 +61,9 @@
       - runtime_gid is defined
       - tz is defined
       # Network config
-      - ha_host_port is defined
+      - ha_seedbox_network is defined
       - ha_network_mode is defined
+      - ha_host_port is defined
       # Feature flags
       - enable_cloudflared is defined
       - enable_ssh_terminal is defined
