--- a/roles/homeassistant/tasks/seedbox-restore.yml
+++ b/roles/homeassistant/tasks/seedbox-restore.yml
@@ -137,13 +137,21 @@
         set -e
         set -o pipefail
         ssh -o StrictHostKeyChecking=no {{ seedbox_user }}@{{ seedbox_ip }} \
-          "tar -czf - -C {{ seedbox_storage_path }} ." | \
+          "tar -czf - --exclude='./backup' -C {{ seedbox_storage_path }} ." | \
         ssh -o StrictHostKeyChecking=no {{ ansible_user }}@{{ ansible_host }} \
           "tar -xzf - -C {{ ha_config_dir }}/.storage/"
       args:
         executable: /bin/bash
       delegate_to: localhost
       changed_when: true
+
+    - name: Remove the backup integration entry from core.config_entries via SSH
+      ansible.builtin.shell: |
+        ssh -o StrictHostKeyChecking=no {{ ansible_user }}@{{ ansible_host }} \
+        "sed -i 's/{\"created_at\":[^}]*\"domain\":\"backup\"[^}]*},//g' {{ ha_config_dir }}/.storage/core.config_entries"
+      args:
+        executable: /bin/bash
+      delegate_to: localhost
 
     - name: Verify .storage was synced (fail loud if empty)
       ansible.builtin.shell: |
@@ -182,19 +190,19 @@
     # API responding ≠ components initialized!
     # Without this wait, stopping container for seedbox restore during
     # component initialization causes backup integration to enter corrupt state
-    - name: Wait for all components to fully initialize (100s grace period)
-      ansible.builtin.pause:
-        seconds: 100
-        prompt: |
-          ⏳ Waiting 100 seconds for HA components to fully initialize...
-          
-          This prevents backup integration corruption when seedbox restore
-          stops the container during component initialization.
-          
-          API ready ≠ components ready. This grace period is CRITICAL.
-      when:
-        - ha_bootstrap_enable | default(false)
-        - ha_auth_list.stdout is search('Total users:\s*0')
+#    - name: Wait for all components to fully initialize (120s grace period)
+#      ansible.builtin.pause:
+#        seconds: 120
+#        prompt: |
+#          ⏳ Waiting 120 seconds for HA components to fully initialize...
+#
+#          This prevents backup integration corruption when seedbox restore
+#          stops the container during component initialization.
+#
+#          API ready ≠ components ready. This grace period is CRITICAL.
+#      when:
+#        - ha_bootstrap_enable | default(false)
+#        - ha_auth_list.stdout is search('Total users:\s*0')
 
     - name: Seedbox restore summary
       ansible.builtin.debug:
