--- a/roles/homeassistant/tasks/backup-restore.yml
+++ b/roles/homeassistant/tasks/backup-restore.yml
@@ -83,6 +83,14 @@
           - "Key length: {{ ha_backup_encrypt_key | length }}"
           - "Key value: {{ ha_backup_encrypt_key }}"
 
+    - name: Hash the Ansible key for comparison
+      ansible.builtin.shell: echo -n "{{ ha_backup_encrypt_key }}" | sha256sum
+      register: ansible_key_hash
+
+    - name: Show key hash
+      ansible.builtin.debug:
+        msg: "Ansible key hash: {{ ansible_key_hash.stdout }}"
+
     - name: Decrypt and extract homeassistant.tar.gz with hassio-tar.sh
       ansible.builtin.shell: |
         cd /tmp/ha-backup-restore
