--- a/roles/homeassistant/tasks/backup-restore.yml
+++ b/roles/homeassistant/tasks/backup-restore.yml
@@ -94,12 +94,12 @@
     - name: Decrypt and extract homeassistant.tar.gz with hassio-tar.sh
       ansible.builtin.shell: |
         cd /tmp/ha-backup-restore
-        export HASSIO_PASSWORD='{{ ha_backup_encrypt_key }}'
-        echo "Password length in shell: ${#HASSIO_PASSWORD}"
-        ./hassio-tar.sh homeassistant.tar.gz 2>&1 | head -20
-        echo "Exit code: $?"
-      register: decrypt_debug
-      failed_when: false
+        export HASSIO_PASSWORD="{{ ha_backup_encrypt_key }}"
+        ./hassio-tar.sh homeassistant.tar.gz | tar -x
+      register: decrypt_extract
+      failed_when: decrypt_extract.rc != 0
+      changed_when: true
+      no_log: false
 
     - name: Show decrypt debug
       debug:
