bash being the reason?

--- a/roles/homeassistant/tasks/backup-restore.yml
+++ b/roles/homeassistant/tasks/backup-restore.yml
@@ -95,7 +95,7 @@
       ansible.builtin.shell: |
         cd /tmp/ha-backup-restore
         export HASSIO_PASSWORD="{{ ha_backup_encrypt_key }}"
-        ./hassio-tar.sh homeassistant.tar.gz | tar -x
+        bash ./hassio-tar.sh homeassistant.tar.gz | tar -x
       register: decrypt_extract
       failed_when: decrypt_extract.rc != 0
       changed_when: true
