--- a/roles/homeassistant/tasks/backup-restore.yml
+++ b/roles/homeassistant/tasks/backup-restore.yml
@@ -64,33 +64,6 @@
         msg: "❌ homeassistant.tar.gz not found in backup!"
       when: not ha_tar_gz_stat.stat.exists
 
-    - name: DEBUG - Check extracted file format
-      ansible.builtin.shell: |
-        ls -lah /tmp/ha-backup-restore/
-        echo "---"
-        file /tmp/ha-backup-restore/homeassistant.tar.gz
-        echo "---"
-        hexdump -C /tmp/ha-backup-restore/homeassistant.tar.gz | head -3
-      register: debug_files
-
-    - name: Show debug output
-      ansible.builtin.debug:
-        var: debug_files.stdout_lines
-
-    - name: DEBUG - Check if ha_backup_encrypt_key matches expected
-      ansible.builtin.debug:
-        msg:
-          - "Key length: {{ ha_backup_encrypt_key | length }}"
-          - "Key value: {{ ha_backup_encrypt_key }}"
-
-    - name: Hash the Ansible key for comparison
-      ansible.builtin.shell: echo -n "{{ ha_backup_encrypt_key }}" | sha256sum
-      register: ansible_key_hash
-
-    - name: Show key hash
-      ansible.builtin.debug:
-        msg: "{{ ansible_key_hash.stdout }}"
-
     - name: Decrypt with bash -c
       ansible.builtin.shell: bash -c 'cd /tmp/ha-backup-restore && export HASSIO_PASSWORD="{{ ha_backup_encrypt_key }}" && /tmp/ha-backup-restore/hassio-tar.sh < homeassistant.tar.gz | tar -x'
 
@@ -183,9 +156,9 @@
           - "🔐 Decrypted with HA_BACKUP_ENCRYPT_KEY + hassio-tar.sh"
           - "✅ HA container restarted and responding"
 
-#  always:
-#    - name: Remove temporary restore directory (GUARANTEED cleanup)
-#      ansible.builtin.file:
-#        path: /tmp/ha-backup-restore
-#        state: absent
-#      failed_when: false
+  always:
+    - name: Remove temporary restore directory (GUARANTEED cleanup)
+      ansible.builtin.file:
+        path: /tmp/ha-backup-restore
+        state: absent
+      failed_when: false
