rollback to simplicity; better error handling
(but not just perfect YET)

--- a/roles/homeassistant/tasks/backup-restore.yml
+++ b/roles/homeassistant/tasks/backup-restore.yml
@@ -48,12 +48,6 @@
         dest: /tmp/ha-backup-restore/hassio-tar.sh
         mode: '0755'
 
-    - name: Copy decrypt wrapper to target
-      ansible.builtin.copy:
-        src: decrypt-backup.sh
-        dest: /tmp/ha-backup-restore/decrypt-backup.sh
-        mode: '0755'
-
     - name: Extract outer tar from backup
       ansible.builtin.unarchive:
         src: "{{ latest_backup.path }}"
@@ -70,13 +64,8 @@
         msg: "❌ homeassistant.tar.gz not found in backup!"
       when: not ha_tar_gz_stat.stat.exists
 
-    - name: Decrypt with standalone script
-      ansible.builtin.command: >
-        /tmp/ha-backup-restore/decrypt-backup.sh
-        /tmp/ha-backup-restore
-        {{ ha_backup_encrypt_key }}
-      args:
-        chdir: /tmp/ha-backup-restore
+    - name: Decrypt with bash -c
+      ansible.builtin.shell: bash -c 'cd /tmp/ha-backup-restore && export HASSIO_PASSWORD="{{ ha_backup_encrypt_key }}" && /tmp/ha-backup-restore/hassio-tar.sh < homeassistant.tar.gz | tar -x'
 
     - name: Check for data directory
       ansible.builtin.stat:
@@ -173,3 +162,17 @@
         path: /tmp/ha-backup-restore
         state: absent
       failed_when: false
+
+  rescue:
+    - name: Show helpful decrypt error
+      ansible.builtin.fail:
+        msg: |
+          ❌ BACKUP DECRYPT FAILED!
+          
+          Most common cause: Wrong encryption key
+          Other causes: Corrupt backup file, disk space issue
+          
+          Check:
+          - Is HA_BACKUP_ENCRYPT_KEY correct?
+          - ⚠️ Was backup created with THIS key?
+          - ⚠️ Remember: Each backup from new deployed HA = new random key!
